# metabase-toolchain

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  upgrade-notes.md
.github/workflows/: codeql.yml
docs/: README.md
infra/: docker-compose.yml
metabase/: __init__.py
metabase/metabase_io/adapters/: metabase.py
metabase/metabase_io/entrypoints/: metabase_export.py  metabase_full_import.py  metabase_import.py
metabase/metabase_io/entrypoints/cli/: cmd_export_metabase.py  cmd_import_metabase.py
metabase/migration/adapters/: api.py  exporter.py  importer.py
metabase/migration/entrypoints/cli/: cmd_export_metabase.py  cmd_import_metabase.py
metabase/migration/model/: migration_data.py
metabase/migration/resources/: database_snapshot.json
metabase/migration/services/: __init__.py  database_management.py  import_metabase.py
src/: .env.example  pyproject.toml
src/filters/: odc-exclusion.properties
src/infra/: docker-compose.yml
src/metabase/: __init__.py
src/metabase/core/adapters/: cmd_runner.py
src/metabase/migration/adapters/: metabase.py
src/metabase/migration/entrypoints/cli/: cmd_import_metabase.py  cmd_manage_db_snapshot.py
src/metabase/migration/model/: migration_data.py
src/metabase/migration/resources/: __init__.py  database_snapshot.json
src/metabase/migration/services/: __init__.py  database_management.py  export_metabase.py
src/migration/adapters/: api.py  exporter.py  importer.py
src/migration/entrypoints/cli/: cmd_export_metabase.py  cmd_import_metabase.py
src/migration/model/: migration_data.py
src/migration/services/: export_metabase.py  import_metabase.py
test/: init_mongodb.py
test/e2e/: test_database_management.py
tests/: init_mongodb.py
tests/e2e/: test_database_management.py
